
  * control: Add build-conflict against boost-build;
    otherwise bjam fails with diagnostic "duplicate initialization of gcc ..."
    because both /etc/site-config.jam and ./user-config.jam have
    "using gcc" lines.  

  * patches/boost-python-examples.patch: New.  Patch example Jamroot to
    use installed libboost_python (thanks, Georg Schmid).  
    Closes: #452410.

  * libboost-doc.README.Debian: Explain how to build Boost.Python
    examples.

 -- Steve M. Robbins <smr@debian.org>  Sun, 07 Jun 2009 13:28:30 -0500

boost1.38 (1.38.0-6) unstable; urgency=low

  * control: Add version (<< 1.35.0) to conflicts for -doc and -dbg
    packages.

 -- Steve M. Robbins <smr@debian.org>  Sun, 03 May 2009 00:53:13 -0500

boost1.38 (1.38.0-5) unstable; urgency=low

  * rtupdate: Handle versioned libboostX.Y-dbg.rtupdate properly.  Closes:
    #525376.

 -- Steve M. Robbins <smr@debian.org>  Fri, 24 Apr 2009 22:14:11 -0500

boost1.38 (1.38.0-4) unstable; urgency=low

  * control (libboost1.38-dev): weaken dependency on libboost-math1.38-dev
    and libboost-serialization1.38-dev from Depends to Recommends (Closes:
    #524612).  Add version (<< 1.35.0) to conflicts for -dev packages to
    conflict with boost version 1.34.1 but allow the packages generated by
    the upcoming boost-defaults source package.  Ensure first line of long
    description is a full sentence (Closes: #524034).

 -- Steve M. Robbins <smr@debian.org>  Thu, 23 Apr 2009 01:51:34 -0500

boost1.38 (1.38.0-3) unstable; urgency=low

  * patches/jam-wall-clean.patch: Fix printf formatting in
    tools/jam/src/hash.c and tools/jam/src/hcache.c.

 -- Steve M. Robbins <smr@debian.org>  Sat, 04 Apr 2009 00:41:36 -0500

boost1.38 (1.38.0-2) unstable; urgency=low

  * Merge changes from 1.37.0-7 and 1.37.0-8:
    - rtupdate: Do not die if called for an unknown python version, just
      remove existing symlinks.
    - control: Package -dbg is now in section debug.